--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "^0.21.0",
     "framer-motion": "^2.9.4",
+    "js-cookie": "^2.2.1",
+    "jsonwebtoken": "^8.5.1",
     "next": "10.0.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
