--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
     "axios": "^0.21.0",
     "framer-motion": "^2.9.4",
     "js-cookie": "^2.2.1",
